--- a/src/app/templates/header.html
+++ b/src/app/templates/header.html
@@ -34,23 +34,20 @@
                         </a>
                     </li>
                     <li class="level0 nav-1 first parent">
-                        <a routerLink="boys" class="level0 has-children">Boys</a>
+                        <a routerLink="boys" class="level0 has-children">JACKETS</a>
                     </li>
                     <li class="level0 nav-2 parent">
-                        <a  routerLink="men" class="level0 has-children">Men</a>
+                        <a  routerLink="men" class="level0 has-children">BLAZZERS</a>
                     </li>
                     <li class="level0 nav-3 parent">
-                        <a routerLink="accessories" class="level0 has-children">Accessories</a>
+                        <a routerLink="accessories" class="level0 has-children">T-SHIRTS</a>
                     </li>
                     <li class="level0 nav-4 parent">
-                        <a href="https://intl.hackett.com/north_en/the-gift-guide-1" class="level0 has-children">The Gift Guide</a>
+                        <a href="https://intl.hackett.com/north_en/the-gift-guide-1" class="level0 has-children">SHIRTS</a>
                     </li>
                     <li class="level0 nav-5 parent">
-                        <a href="https://intl.hackett.com/north_en/the-edit" class="level0 has-children">The Edit</a>
-                    </li>
-                    <li class="level0 nav-6 last parent">
-                        <a href="https://intl.hackett.com/north_en/style-guide" class="level0 has-children">Style Guide</a>
-                    </li>        
+                        <a href="https://intl.hackett.com/north_en/the-edit" class="level0 has-children">JEANS</a>
+                    </li>      
                 </ol>
             </nav>
         </div>
